--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,8 @@ jobs:
     docker:
       - image: circleci/android:api-25-alpha
     environment:
-      _JAVA_OPTIONS: "-Xmx3200m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
-            GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m"'
-      
+      _JAVA_OPTIONS: -Xmx3200m
+
     steps:
       - checkout
       - restore_cache:
