--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-org.gradle.java.home=C\:\\Program Files\\Java\\jdk1.8.0_151
+#org.gradle.java.home=C\:\\Program Files\\Java\\jdk1.8.0_151
 org.gradle.jvmargs=-Xmx1536m
 #C:\Program Files\Java\jdk1.8.0_151
